navbar and hero are responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <nav class="nav container navigation">
+    <!--<nav class="nav container navigation">
 
         <div class="nav-brand">Anshul Daksh /></div>
         <ul class="non-bullet nav-pills">
@@ -26,18 +26,35 @@
                 <a class="link" href="/blogs.html">blogs</a>
             </li>
         </ul>
+    </nav>-->
+    <!-- testing some code  -->
+
+
+    <nav>
+        <div class="logo">Anshul Daksh</div>
+        <div class="nav-items">
+            <a href="">Home</a>
+            <a href="/projects.html">Projects</a>
+            <a href="/blogs.html">Blog</a>
+        </div>
     </nav>
+    <!-- navbar done -->
 
     <!-- header -->
     <header class="hero">
-        <div class="slide">
-            <img class="hero-img" src="/images/undraw_feeling_proud_qne1.svg" />
-        </div>
-
-        <div class="hero-content">
-            <h3> Hi there,👋 </h3>
-            <h1>I am <span>Anshul</span> </h1>
-            <p>Web developer</p>
+        <div class="hero-container">
+            <div class="column-left">
+                <h3> Hi there,👋 </h3>
+                <h1>I am <span>Anshul</span> </h1>
+                <p>Web developer</p>
+                <button>
+                    <a href="linkedin.com/anshuldaksh2016" style="color: white; ">
+                        Contact Me!</a>
+                </button>
+            </div>
+            <div class="col-right">
+                <img class="hero-image" src="/images/undraw_feeling_proud_qne1.svg" />
+            </div>
 
         </div>
     </header>
