--- a/projects.html
+++ b/projects.html
@@ -10,20 +10,13 @@
 </head>
 
 <body>
-    <nav class="nav container navigation">
-
-        <div class="nav-brand">Anshul Daksh /></div>
-        <ul class="non-bullet nav-pills">
-            <li class="list-inline">
-                <a class="link" href="/">home</a>
-            </li>
-            <li class="list-inline">
-                <a class="link" href="/projects.html">projects</a>
-            </li>
-            <li class="list-inline">
-                <a class="link" href="/blogs.html">blogs</a>
-            </li>
-        </ul>
+    <nav>
+        <div class="logo">Anshul Daksh</div>
+        <div class="nav-items">
+            <a href="/index.html">Home</a>
+            <a href="/projects.html">Projects</a>
+            <a href="/blogs.html">Blog</a>
+        </div>
     </nav>
 
 
