added 2 more projects

--- a/projects.html
+++ b/projects.html
@@ -21,12 +21,53 @@
 
 
     <!-- projects section start -->
-    <h1 class="section-title">
+    <h1 id="section-title">
         My Recent Projects
     </h1>
 
 
     <section class="proj-timeline container-centered">
+
+
+        <div class="proj-card">
+            <div class="proj-img">
+                <img src="/images/emoji-interpreter.png" alt="">
+            </div>
+            <div class="proj-content">
+                <h2 class="proj-heading-1">Fruits Emoji Interpreter</h2>
+                <p>Simple emoji interpreter app like emojipedia used to know the name of emoji </p>
+
+                <span> REACTJS-JAVASCRIPT </span>
+
+                <div class="proj-links">
+                    <a href="https://codesandbox.io/s/github/anshuldaksh2016/emoji-Interpreter/"
+                        target="_blank">Demo</a>
+                    <a href="https://github.com/anshuldaksh2016/emoji-Interpreter" class="fa fa-github"
+                        target="_blank">Source</a>
+                </div>
+            </div>
+        </div>
+        <hr id="hr">
+
+        <div class="proj-card">
+            <div class="proj-img">
+                <img src="/images/recommandation-app.png" alt="">
+            </div>
+            <div class="proj-content">
+                <h2 class="proj-heading-1">Youtube channel recommendation site</h2>
+                <p>Simple youtube channel recommendation app like which gives you channel recommendation based on
+                    selected type.</p>
+                <span> REACTJS-JAVASCRIPT</span>
+                <div class="proj-links">
+                    <a href="https://codesandbox.io/s/github/anshuldaksh2016/recommendation-react"
+                        target="_blank">Demo</a>
+                    <a href="https://github.com/anshuldaksh2016/recommendation-react" class="fa fa-github"
+                        target="_blank">Source</a>
+                </div>
+            </div>
+        </div>
+        <hr id="hr">
+
         <div class="proj-card">
             <div class="proj-img">
                 <img src="/images/mirazpur.png" alt="">
@@ -36,8 +77,9 @@
                 <p>CLI app built with Nodejs , javascript .You can play if u are a fan of Mirzapur</p>
                 <span>HTML-NODEJS-JAVASCRIPT</span>
                 <div class="proj-links">
-                    <a href="https://mirzapur-quiz.netlify.app/">Demo</a>
-                    <a href="https://github.com/anshuldaksh2016/mirzapur-quiz" class="fa fa-github">Source</a>
+                    <a href="https://mirzapur-quiz.netlify.app/" target="_blank">Demo</a>
+                    <a href="https://github.com/anshuldaksh2016/mirzapur-quiz" class="fa fa-github"
+                        target="_blank">Source</a>
                 </div>
             </div>
         </div>
@@ -51,8 +93,9 @@
                 <p>CLI app built with Nodejs , javascript .You can play if u are a fan of Mirzapur</p>
                 <span>NODEJS-JAVASCRIPT</span>
                 <div class="proj-links">
-                    <a href="https://repl.it/@DakshJi/proj1#index.js">Demo</a>
-                    <a href="https://github.com/anshuldaksh2016/proj-1-neog-know-me" class="fa fa-github">Source</a>
+                    <a href="https://repl.it/@DakshJi/proj1#index.js" target="_blank">Demo</a>
+                    <a href="https://github.com/anshuldaksh2016/proj-1-neog-know-me" class="fa fa-github"
+                        target="_blank">Source</a>
                 </div>
             </div>
         </div>
@@ -66,8 +109,9 @@
                 <p>Application to fetch the user information from github</p>
                 <span>REACTJS-JAVASCRIPT</span>
                 <div class="proj-links">
-                    <a href="https://github.com/anshuldaksh2016/github-cards">Demo</a>
-                    <a href="https://github.com/anshuldaksh2016/github-cards" class="fa fa-github">Source</a>
+                    <a href="https://github.com/anshuldaksh2016/github-cards" target="_blank">Demo</a>
+                    <a href="https://github.com/anshuldaksh2016/github-cards" class="fa fa-github"
+                        target="_blank">Source</a>
                 </div>
             </div>
         </div>
@@ -83,8 +127,9 @@
                 <p>Simple google clone using html css </p>
                 <span>HTML-CSS</span>
                 <div class="proj-links">
-                    <a href="https://github.com/anshuldaksh2016/simple-google-clone">Demo</a>
-                    <a href="https://github.com/anshuldaksh2016/simple-google-clone" class="fa fa-github">Source</a>
+                    <a href="https://github.com/anshuldaksh2016/simple-google-clone" target="_blank">Demo</a>
+                    <a href="https://github.com/anshuldaksh2016/simple-google-clone" class="fa fa-github"
+                        target="_blank">Source</a>
                 </div>
             </div>
         </div>
@@ -99,7 +144,8 @@
                 <span>HTML-CSS-Vanilla-JS</span>
                 <div class="proj-links">
                     <!--<a href="https://github.com/anshuldaksh2016/simple-google-clone">Demo</a>-->
-                    <a href="https://github.com/anshuldaksh2016/Vanilla-Js-Projects" class="fa fa-github">Source</a>
+                    <a href="https://github.com/anshuldaksh2016/Vanilla-Js-Projects" class="fa fa-github"
+                        target="_blank">Source</a>
                 </div>
             </div>
         </div>
