fix:blog heading styling

--- a/blogs.html
+++ b/blogs.html
@@ -20,7 +20,7 @@
     </nav>
 
     <!-- blog section -->
-    <h1 class="section-title">
+    <h1 id="section-title">
         FROM MY BLOG
     </h1>
 
