added some more projects

--- a/projects.html
+++ b/projects.html
@@ -49,6 +49,8 @@
         </div>
         <hr id="hr">
 
+
+
         <div class="proj-card">
             <div class="proj-img">
                 <img src="/images/recommandation-app.png" alt="">
@@ -62,6 +64,45 @@
                     <a href="https://codesandbox.io/s/github/anshuldaksh2016/recommendation-react"
                         target="_blank">Demo</a>
                     <a href="https://github.com/anshuldaksh2016/recommendation-react" class="fa fa-github"
+                        target="_blank">Source</a>
+                </div>
+            </div>
+        </div>
+        <hr id="hr">
+
+        <!-- week 3  -->
+        <div class="proj-card">
+            <div class="proj-img">
+                <img src="/images/banana.png" alt="">
+            </div>
+            <div class="proj-content">
+                <h2 class="proj-heading-1">Banana Talk App</h2>
+                <p>Vanilla Js app that convert your input to Banana language (funny translations) </p>
+
+                <span> HTML-CSS-VANILLA JS </span>
+
+                <div class="proj-links">
+                    <a href="https://banana-anshul.netlify.app/" target="_blank">Demo</a>
+                    <a href="https://github.com/anshuldaksh2016/neog-lesson-4-banana-website" class="fa fa-github"
+                        target="_blank">Source</a>
+                </div>
+            </div>
+        </div>
+        <hr id="hr">
+
+        <div class="proj-card">
+            <div class="proj-img">
+                <img src="/images/groot translation.png" alt="">
+            </div>
+            <div class="proj-content">
+                <h2 class="proj-heading-1">Groot translations App</h2>
+                <p>Vanilla Js app that convert your input to Groot (character in guardians of galaxy) language . </p>
+
+                <span> HTML-CSS-VANILLA JS </span>
+
+                <div class="proj-links">
+                    <a href="https://groot-anshul.netlify.app/" target="_blank">Demo</a>
+                    <a href="https://github.com/anshuldaksh2016/project7" class="fa fa-github"
                         target="_blank">Source</a>
                 </div>
             </div>
