added react hooks blog

--- a/blogs.html
+++ b/blogs.html
@@ -28,6 +28,23 @@
 
         <div class="blog-card container-centered">
             <div class="blog-image">
+                <img src="/images/react-hooks.jpg">
+            </div>
+            <div class="blog-detail">
+                <h2> Getting started with React hooks </h2>
+                <small>04 Jan 2020 </small>
+            </div>
+            <p>Begineer's guide to React hooks with useState
+                <br />
+                <span class="">read more...</span>
+            </p>
+            <a href="">Read more</a>
+            <hr id="hr">
+        </div>
+
+
+        <div class="blog-card container-centered">
+            <div class="blog-image">
                 <img src="/images/vdom.png">
             </div>
             <div class="blog-detail">
@@ -85,7 +102,8 @@
                     LinkedIn</a>
             </li>
             <li class="list-inline">
-                <a class="link fa fa-github" href="https://github.com/anshuldaksh2016">github</a></li>
+                <a class="link fa fa-github" href="https://github.com/anshuldaksh2016">github</a>
+            </li>
 
             <li class="list-inline">
                 <a class="link fa fa-youtube"
