--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
                     LinkedIn</a>
             </li>
             <li class="list-inline">
-                <a class="link fa fa-github" href="https://github.com/anshuldaksh2016">Github</a></li>
+                <a class="link fa fa-github" href="https://github.com/anshuldaksh2016">Github</a>
+            </li>
 
             <li class="list-inline">
                 <a class="link fa fa-youtube"
